<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="fps"
        android:summary="@string/show_fps_message"
        android:title="@string/show_fps_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="track"
        android:summary="@string/show_tracking_message"
        android:title="@string/show_tracking_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="appearance"
        android:summary="@string/show_appearance_message"
        android:title="@string/show_appearance_title" />
    <EditTextPreference
        android:defaultValue="20"
        android:dialogTitle="@string/fps_edittext_title"
        android:ems="3"
        android:inputType="number"
        android:key="rate"
        android:maxLength="2"
        android:summary="@string/set_fps_message"
        android:title="@string/set_fps_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="showDominant"
        android:summary="When this is on, the dominant emoji and emotion will always be displayed adjacent to the detected face."
        android:title="Always show dominant metrics" />

</PreferenceScreen>